--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Basic Embedding via Web Component</title>
+    <title>Machine Learning Models To Predict Covid Mortality</title>
 
     <!-- Importing the Embedding API Library. -->
     <!-- Learn more here:
