--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+      <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Machine Learning Models To Predict Covid Mortality</title>
 
     <!-- Importing the Embedding API Library. -->
     <!-- Learn more here:
         https://help.tableau.com/current/api/embedding_api/en-us/docs/embedding_api_get.html -->
     <script type="module" src="https://public.tableau.com/javascripts/api/tableau.embedding.3.latest.js"></script>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
+
 
 <body>
     <!-- Defining the div container for the visualization. -->
