--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
 
 
 <body>
-    <!-- Defining the div container for the visualization. -->
+    <div class="container">
+    <div class="row">
+      <div class="col-md-12 jumbotron text-center">
+        <h1>Machine Learning Models To Predict Covid Mortality</h1>
+        <p>Use the tabs below to explore the dataset</p>
+      </div>
+    </div>
+      <!-- Defining the div container for the visualization. -->
     <div>
 
         <!-- Initialization of the Tableau visualization via web component. See more properties here:
